Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,22 +1,20 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5760100423:AAGL-z9_Gx8FYcex1WT5ZieWDbkIagqykFc"                              # Require restart after changing it while bot running
+OWNER_ID = "1667447017"                               # Require restart after changing it while bot running
+TELEGRAM_API = "7240842"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "60b58d3e121f282b3e60661531f9a5d0"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
-IS_TEAM_DRIVE = ""
+GDRIVE_ID = "0AHIz5iCyBzqKUk9PVA"
+IS_TEAM_DRIVE = "True"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
-STATUS_UPDATE_INTERVAL = "10"
+STATUS_UPDATE_INTERVAL = "1"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 DATABASE_URL = ""                           # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = ""                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1001547217051 -1001410429260 -1001565148429 -1001324636332 5127201975"                       # Require restart after changing it while bot running
+SUDO_USERS = "1140714588 1739206386"                             # Require restart after changing it while bot running
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+INDEX_URL = "https://msr.torrentmirror3.workers.dev/0:"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
 CMD_SUFFIX = ""                              # Require restart after changing it while bot running
@@ -50,11 +48,11 @@ RSS_COMMAND = ""
 RSS_CHAT_ID = ""
 RSS_USER_SESSION_STRING = ""                # Require restart after changing it while bot running
 # Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "nvgC0BZA"
+MEGA_EMAIL_ID = "hatimec707@areosur.com"
+MEGA_PASSWORD = "msr@2022"
 # Buttons
-VIEW_LINK = ""
+VIEW_LINK = "True"
 # Torrent Search
 SEARCH_API_LINK = ""
 SEARCH_LIMIT = ""
